product_docs/docs/jdbc_connector/42.2.8.1/04_installing_and_configuring_the_jdbc_connector/01_installing_the_connector_with_an_rpm_package.mdx
---
title: "Installing the Connector with an RPM Package"
---

<div id="installing_the_connector_with_an_rpm_package" class="registered_link"></div>


Before installing `JDBC Connector`, you must:

Install the `epel-release` package:

> `yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm`

<div class="note">

<div class="title">

Note

</div>

You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

</div>

You must also have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-jdbc`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> `yum -y install https://yum.enterprisedb.com/edb-repo-rpms/edb-repo-latest.noarch.rpm`

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the enabled parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EnterpriseDB user.

    [edb]
    name=EnterpriseDB RPMs $releasever - $basearch
    baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
    enabled=1
    gpgcheck=1
    gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY

**Installing JDBC Connector**

After saving your changes to the configuration file, you can use the `yum install` command to install the `JDBC Connector`:

> `yum install edb-jdbc`

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

## Updating an RPM Installation

If you have an existing `JDBC Connector` RPM installation, you can use yum to upgrade your repository configuration file and update to a more recent product version. To update the `edb.repo` file, assume superuser privileges and enter:

> `yum upgrade edb-repo`

yum will update the `edb.repo` file to enable access to the current EDB repository, configured to connect with the credentials specified in your `edb.repo` file. Then, you can use yum to upgrade any installed packages:

> `yum upgrade edb-jdbc`
