product_docs/docs/jdbc_connector/42.2.12.3/04_installing_and_configuring_the_jdbc_connector/01_installing_the_connector_with_an_rpm_package.mdx
---
title: "Installing the Connector with an RPM Package"
---

<div id="installing_the_connector_with_an_rpm_package" class="registered_link"></div>


You can install the JDBC Connector using an RPM package on the following platforms:

-   [RHEL 7](../04_installing_and_configuring_the_jdbc_connector/#rhel7)
-   [RHEL 8](../04_installing_and_configuring_the_jdbc_connector/#rhel8)
-   [CentOS 7](../04_installing_and_configuring_the_jdbc_connector/#centos7)
-   [CentOS 8](../04_installing_and_configuring_the_jdbc_connector/#centos8)

<div id="rhel7" class="registered_link"></div>

## On RHEL 7

Before installing the JDBC Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

Enable the optional, extras, and HA repositories:

> ``` text
> subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-jdbc`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing JDBC Connector**

After saving your changes to the configuration file, use the following command to install the JDBC Connector:

> ``` 
> yum install edb-jdbc
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="rhel8" class="registered_link"></div>

## On RHEL 8



Before installing the JDBC Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `codeready-builder-for-rhel-8-\*-rpms` repository:

> ``` text
> ARCH=$( /bin/arch )
> subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-jdbc`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing JDBC Connector**

After saving your changes to the configuration file, use the below command to install the JDBC Connector:

> ``` text
> dnf install edb-jdbc
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos7" class="registered_link"></div>

## On CentOS 7



Before installing the JDBC Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

<div class="note">

<div class="title">

Note

</div>

You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

</div>

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-jdbc`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing JDBC Connector**

After saving your changes to the configuration file, use the following command to install the JDBC Connector:

> ``` text
> yum install edb-jdbc
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos8" class="registered_link"></div>

## On CentOS 8



Before installing the JDBC Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `PowerTools` repository:

> ``` text
> dnf config-manager --set-enabled PowerTools
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-jdbc`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing JDBC Connector**

After saving your changes to the configuration file, use the following command to install the JDBC Connector:

> ``` text
> dnf install edb-jdbc
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

## Updating an RPM Installation

If you have an existing JDBC Connector RPM installation, you can use yum or dnf to upgrade your repository configuration file and update to a more recent product version. To update the `edb.repo` file, assume superuser privileges and enter:

> -   On RHEL or CentOS 7:
>
>     > `yum upgrade edb-repo`
>
> -   On RHEL or CentOS 8:
>
>     > `dnf upgrade edb-repo`

yum or dnf will update the `edb.repo` file to enable access to the current EDB repository, configured to connect with the credentials specified in your `edb.repo` file. Then, you can use yum or dnf to upgrade any installed packages:

> -   On RHEL or CentOS 7:
>
>     > `yum upgrade edb-jdbc`
>
> -   On RHEL or CentOS 8:
>
>     > `dnf upgrade edb-jdbc`
